# ldk-server-remote

./: .gitignore  README.md
android/: .editorconfig  .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/lightningdevkit/ldkserver/remote/: LdkServerRemoteApplication.kt  MainActivity.kt
android/app/src/main/java/org/lightningdevkit/ldkserver/remote/model/: BitcoinNetwork.kt  EncryptedBlobStorage.kt  EncryptedServerStoreMigration.kt  ServerEntry.kt  ServerStore.kt
android/app/src/main/java/org/lightningdevkit/ldkserver/remote/service/: FakeLdkService.kt  LdkService.kt  LdkServiceImpl.kt
android/app/src/main/java/org/lightningdevkit/ldkserver/remote/ui/: AppRoot.kt  AppState.kt  MainScaffold.kt
android/app/src/main/java/org/lightningdevkit/ldkserver/remote/util/: QrCodeGenerator.kt  SatsFormatter.kt  ServerUri.kt  StringUtils.kt  TimeFormatter.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: capture_portrait.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/org/lightningdevkit/ldkserver/remote/: BindingsSmokeTest.kt  ExampleTest.kt
android/app/src/test/java/org/lightningdevkit/ldkserver/remote/model/: EncryptedServerStoreMigrationTest.kt  (+2 more)
android/gradle/: libs.versions.toml
docs/: ios-handover.md
docs/sessions/: README.md
tools/ldk-server-remote-config/: Cargo.toml  README.md
tools/ldk-server-remote-config/src/: main.rs
(+38 files in other folders)
